fix: prevent line wrapping before supertext

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -30,3 +30,7 @@ sup {
     position: relative;
     top: -0.3em;
 }
+
+p sup::before {
+    content: "\00A0";
+}
